[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.6", features = ["http2"] }
serde = { version = "1.0.210", features = ["derive"] }
time = { version = "0.3.36", features = ["formatting", "local-offset", "serde", "serde-human-readable", "serde-well-known"] }
tokio = { version = "1.40.0", features = ["full"] }
tower_governor = { version = "0.4.2", features = ["tracing", "axum"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
