[package]
name = "kv-store"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http2"] }
bytes = { version = "1.7", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "local-offset", "serde", "serde-human-readable", "serde-well-known"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "test-util", "tracing"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7.12", features = ["tracing"] }
tower-http = { version = "0.6", features = ["metrics"] }
tower_governor = { version = "0.4", features = ["tracing", "axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serde_json = "1.0.128"
tower = { version = "0.5.1", features = ["util"] }
